--- a/Natours/package.json
+++ b/Natours/package.json
@@ -8,7 +8,7 @@
   },
   "author": "mateovelilla <teovelilla@gmail.com>",
   "license": "ISC",
-  "devDependencies": {
-    "node-sass": "^6.0.1"
+  "dependencies": {
+    "node-sass": "^8.0.0"
   }
 }
